# Dragonfruit

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  dragonfruit.sln  game.sln
game/: game.filters  game.vcxproj  game.vcxproj.filters  imgui.ini
game/Resources/Shader/: fragment.glsl
game/Resources/Texture/aseprite/: atlas.aseprite
game/Sources/: app.cpp  app.h  main.cpp  pch.h
game/Sources/Dragonfruit/: entity.cpp  entity.h  logger.cpp  logger.h
game/Sources/Dragonfruit/Graphics/: array.cpp  array.h  buffer.cpp  buffer.h  camera.cpp  camera.h  quad.cpp  quad.h  render.cpp  render.h  shader.cpp  shader.h  texture.cpp  texture.h  window.cpp  window.h
game/Users/rai/source/repos/Dragonfruit/game/Resources/Shader/: vertex.glsl
game/resources/texture/: pallete.aseprite
game/sources/: app.cpp  app.h  main.cpp  pch.h
game/sources/graphics/: quad.cpp  quad.h  texture.cpp  texture.h  window.cpp  window.h
game/sources/system/: app.cpp  app.h  component.h  debug.cpp  debug.h  entity.cpp  entity.h  layers.h  manager.cpp  manager.h  resource.cpp  resource.h  scene.cpp  scene.h  type.h  utils.h
game/sources/system/gui/: hierarchy.cpp  hierarchy.h
